--- a/card.html
+++ b/card.html
@@ -58,6 +58,7 @@
 						<ul>
 							<li><a href="#">Молочное производство</a></li>
 							<li><a href="#">Сыроварня</a></li>
+							<li><a href="#">Напитки</a></li>
 						</ul>
 					</li>
 					<li class="has_child">
@@ -73,7 +74,9 @@
 							<li><a href="#"> Глазированные сырки</a></li>
 							<li><a href="#">Десерты</a></li>
 							<li><a href="#">Сыры твердые</a></li>
-							<li><a href="#"> Сыры плавленые</a></li>
+							<li><a href="#">Сыры плавленые</a></li>
+							<li><a href="#">Холодный чай</a></li>
+							<li><a href="#">Вода</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Блог</a></li>
@@ -92,101 +95,75 @@
 
 		<div class="fullpage-wrapper">
 			
-			<section class="dairy">
+			<section class="card">
 				<div class="container">
-					<div class="title-section"><span>Сыроварня</span></div>
-					<div class="descr-section">Приветствуем ценителей крафтового сыра в Крыму и приглашаем Вас окунуться в увлекательную культуру сыроварения.</div>
-					<div class="dairies-wrap">
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">01</div>
-										<p> Процесс приготовления сыра начинается с подготовки инструментов и форм – дезинфекция перед каждой варкой сыра это залог чистоты полезных сырных бактерий.</p>
+					<div class="breadcrumbs-wrap">
+						<ul class="breadcrumbs">
+							<li><a href="#">Главная</a><span>/</span></li>
+							<li><a href="#">Каталог</a><span>/</span></li>
+							<li>Молоко</li>
+						</ul>
+					</div>
+					<div class="row row_card">
+						<div class="col-lg-5">
+							<ul class="slider-card">
+								<li>
+									<div class="slider-card__image">
+										<img src="img/card1.jpg" alt="alt">
 									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy1.png" alt="alt">
+								</li>
+								<li>
+									<div class="slider-card__image">
+										<img src="img/card1.jpg" alt="alt">
 									</div>
-								</div>
-							</div>
+								</li>
+								<li>
+									<div class="slider-card__image">
+										<img src="img/card1.jpg" alt="alt">
+									</div>
+								</li>
+							</ul>
 						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">02</div>
-										<p>Далее подготавливаем сырье - бережно пастеризауем молока при температуре 650 С и вносим культуру сырных бактерий для созревания изумительно вкусного сыра. </p>
-										<p>После загустевания молока начинается нарезка сырного зерна вручную с помощью инструментов - только так можно регулировать размер зерна, который повлияет потом, в процессе созревания, на структуру и качество сыра.</p>
-									</div>
+						<div class="col-lg-7">
+							<div class="title-page">Молоко пастеризованное питьевое 2,5 %</div>
+							<div class="card-block">
+								<p><strong>Состав:</strong> молоко коровье цельное, молоко коровье обезжиренное, пастеризованное.</p>
+								<p><strong>Вес: 900 г</strong></p>
+								<div class="line-feature">
+									<strong>Массовая доля жира:</strong> 
+									<span>2,5 %</span>
 								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy2.png" alt="alt">
-									</div>
+								<div class="line-feature">
+									<strong>Пищевая ценность на 100 г:</strong> 
+									<span>жиров - 2,5 г </span>
 								</div>
-							</div>
-						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">03</div>
-										<p>Вымешивание и обсушка разрезанного сырного зерна производится только вручную, чтобы не разрушать сырные зерна. Температура сырного зерна и сыворотки более 500 С. Готовым зерном наполняем формы для сыра.</p>
-									</div>
+								<div class="line-feature">
+									<span>белков - 3,0 г</span>
 								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy3.png" alt="alt">
-									</div>
+								<div class="line-feature">
+									<span>углеводов - 4,7 г</span>
 								</div>
-							</div>
-						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">04</div>
-										<p> Формы с сыром устанавливаются под прес на несколько часов, после чего сформированные головы сыра опускаются в рассол на 2 суток для посолки.</p>
-									</div>
-									<div class="descr-italic">Казалось бы сыр готов, НО!...</div>
+								<div class="line-feature">
+									<strong>Энергетическая ценность:</strong> 
+									<span>223 кДж/53,3 ккал</span>
 								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy4.png" alt="alt">
-									</div>
+								<div class="line-feature">
+									<strong>Хранить при температуре:</strong> 
+									<span>(4±2)°С</span>
 								</div>
-							</div>
-						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">05</div>
-										<p>Далее начинаются таинственные природные процессы, неподвластные человку, - работа сырных культур бактерий, сопровождаемая терпением и кропотливой работой сыровара. Чтобы процессы в сыре проходили равномерно, головы сыра в хранилище переворачиваются не мнее 2х раз в день на протяжении 6 и более месяцев в зависимости от сорта сыра - это и есть выдержка.</p>
-									</div>
+								<div class="line-feature">
+									<strong>Срок годности:</strong> 
+									<span>не более 10 суток</span>
 								</div>
-								<div class="col-md-6">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/U6CdbM73yJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									<div class="descr-section">Посмотреть на процесс приготовления сыра можно своими глазами с помощью онлайн-камеры, установленной у нас в цеху</div>
+								<div class="line-feature">
+									<strong>Тип упаковки:</strong> 
+									<span>Ecolean</span>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-
-			<div class="presentation">
-				<div class="container">
-					<div class="title-big">Приглашаем Вас насладиться <strong>неповторимыми вкусами сыров</strong> ТМ «Долина легенд»</div>
-					<div class="descr-big">
-						<p>изготовленных по авторским рецептам с любовью и выдержкой нашего сыровара Дениса Кожевникова.  </p>
-						<p>Ознакомиться с готовой продукцией можно в нашем каталоге.</p>
-					</div>
-					<a href="#" class="btn-main">Смотреть продукцию</a>
-				</div>
-			</div>
 
 			<section class="section">
 				<div class="wrap-sections">
