--- a/map.html
+++ b/map.html
@@ -22,6 +22,11 @@
 				<li><a href="catalog.html" target="_blanck">catalog</a></li>
 				<li><a href="catalog-distributor.html" target="_blanck">catalog-distributor</a></li>
 				<li><a href="dairy.html" target="_blanck">dairy</a></li>
+				<li><a href="card.html" target="_blanck">card</a></li>
+				<li><a href="vacancies.html" target="_blanck">vacancies</a></li>
+				<li><a href="card-authorized.html" target="_blanck">card-authorized</a></li>
+				<li><a href="news.html" target="_blanck">news</a></li>
+				<li><a href="buy.html" target="_blanck">buy</a></li> 
 			</ul>  
 		</div>  
 	</div> 
