--- a/vacancies.html
+++ b/vacancies.html
@@ -58,6 +58,7 @@
 						<ul>
 							<li><a href="#">Молочное производство</a></li>
 							<li><a href="#">Сыроварня</a></li>
+							<li><a href="#">Напитки</a></li>
 						</ul>
 					</li>
 					<li class="has_child">
@@ -73,7 +74,9 @@
 							<li><a href="#"> Глазированные сырки</a></li>
 							<li><a href="#">Десерты</a></li>
 							<li><a href="#">Сыры твердые</a></li>
-							<li><a href="#"> Сыры плавленые</a></li>
+							<li><a href="#">Сыры плавленые</a></li>
+							<li><a href="#">Холодный чай</a></li>
+							<li><a href="#">Вода</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Блог</a></li>
@@ -92,101 +95,96 @@
 
 		<div class="fullpage-wrapper">
 			
-			<section class="dairy">
+			<section class="vacancies">
 				<div class="container">
-					<div class="title-section"><span>Сыроварня</span></div>
-					<div class="descr-section">Приветствуем ценителей крафтового сыра в Крыму и приглашаем Вас окунуться в увлекательную культуру сыроварения.</div>
-					<div class="dairies-wrap">
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">01</div>
-										<p> Процесс приготовления сыра начинается с подготовки инструментов и форм – дезинфекция перед каждой варкой сыра это залог чистоты полезных сырных бактерий.</p>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy1.png" alt="alt">
-									</div>
-								</div>
+					<div class="title-section"><span>вакансии</span></div>
+					<div class="vacancies-block">
+						<div class="vacancies-block__image">
+							<img src="img/vacancies.jpg" alt="alt">
+						</div>
+						<div class="vacancies-block__content">
+							<p>«Долина Легенд» — один из крупнейших производителей молочной продукции в Крыму. За многие годы работы на рынке благодаря слаженной и профессиональной работе мы создали сильную команду специалистов и менеджеров в различных профессиональных сферах.</p>
+							<p>Мы искренне радуемся, когда к нашей команде присоединяются талантливые и энергичные люди, которые хотят творить новое будущее</p>
+						</div>
+					</div>
+					<div class="item-vacancy">
+						<div class="item-vacancy__head">Торговый представитель <span>от 65 000 – 100 000 руб.</span></div>
+						<div class="item-vacancy__content" style="display: block;">
+							<p><strong>Требуемый опыт работы:</strong> 1–3 года  </p>
+							<p>Полная занятость, полный день</p>
+							<br>
+							<p><strong>Обязанности:</strong> работа с текущей клиентской базой;</p>
+							<p> поиск и подключение новых клиентов; работа с дебиторской задолженностью; отчетность.</p>
+							<br>
+							<p><strong>Требования:</strong> опыт работы ТП на продуктах питания от 1 года;  </p>
+							<p>знание шагов ТП, умение их применять, стремление к высокой заработной плате, ответственность, исполнительность, энергичность, стрессоустойчивость, честность;</p>
+							<br>
+							<p><strong>Условия:</strong> заработная плата от 60 000 рублей (оклад, бонусы % от продаж);</p>
+							<p>рабочий график с 09:00 до 18:00 компенсация мобильной связи.</p>
+							<div class="item-vacancy__bottom">
+								<a href="#" class="btn-main">Откликнуться на вакансию</a>
 							</div>
 						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">02</div>
-										<p>Далее подготавливаем сырье - бережно пастеризауем молока при температуре 650 С и вносим культуру сырных бактерий для созревания изумительно вкусного сыра. </p>
-										<p>После загустевания молока начинается нарезка сырного зерна вручную с помощью инструментов - только так можно регулировать размер зерна, который повлияет потом, в процессе созревания, на структуру и качество сыра.</p>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy2.png" alt="alt">
-									</div>
-								</div>
+					</div>
+					<div class="item-vacancy">
+						<div class="item-vacancy__head">Торговый представитель <span>от 65 000 – 100 000 руб.</span></div>
+						<div class="item-vacancy__content">
+							<p><strong>Требуемый опыт работы:</strong> 1–3 года  </p>
+							<p>Полная занятость, полный день</p>
+							<br>
+							<p><strong>Обязанности:</strong> работа с текущей клиентской базой;</p>
+							<p> поиск и подключение новых клиентов; работа с дебиторской задолженностью; отчетность.</p>
+							<br>
+							<p><strong>Требования:</strong> опыт работы ТП на продуктах питания от 1 года;  </p>
+							<p>знание шагов ТП, умение их применять, стремление к высокой заработной плате, ответственность, исполнительность, энергичность, стрессоустойчивость, честность;</p>
+							<br>
+							<p><strong>Условия:</strong> заработная плата от 60 000 рублей (оклад, бонусы % от продаж);</p>
+							<p>рабочий график с 09:00 до 18:00 компенсация мобильной связи.</p>
+							<div class="item-vacancy__bottom">
+								<a href="#" class="btn-main">Откликнуться на вакансию</a>
 							</div>
 						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">03</div>
-										<p>Вымешивание и обсушка разрезанного сырного зерна производится только вручную, чтобы не разрушать сырные зерна. Температура сырного зерна и сыворотки более 500 С. Готовым зерном наполняем формы для сыра.</p>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy3.png" alt="alt">
-									</div>
-								</div>
+					</div>
+					<div class="item-vacancy">
+						<div class="item-vacancy__head">Технолог молочного производства <span>от 65 000 – 100 000 руб.</span></div>
+						<div class="item-vacancy__content">
+							<p><strong>Требуемый опыт работы:</strong> 1–3 года  </p>
+							<p>Полная занятость, полный день</p>
+							<br>
+							<p><strong>Обязанности:</strong> работа с текущей клиентской базой;</p>
+							<p> поиск и подключение новых клиентов; работа с дебиторской задолженностью; отчетность.</p>
+							<br>
+							<p><strong>Требования:</strong> опыт работы ТП на продуктах питания от 1 года;  </p>
+							<p>знание шагов ТП, умение их применять, стремление к высокой заработной плате, ответственность, исполнительность, энергичность, стрессоустойчивость, честность;</p>
+							<br>
+							<p><strong>Условия:</strong> заработная плата от 60 000 рублей (оклад, бонусы % от продаж);</p>
+							<p>рабочий график с 09:00 до 18:00 компенсация мобильной связи.</p>
+							<div class="item-vacancy__bottom">
+								<a href="#" class="btn-main">Откликнуться на вакансию</a>
 							</div>
 						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">04</div>
-										<p> Формы с сыром устанавливаются под прес на несколько часов, после чего сформированные головы сыра опускаются в рассол на 2 суток для посолки.</p>
-									</div>
-									<div class="descr-italic">Казалось бы сыр готов, НО!...</div>
-								</div>
-								<div class="col-md-6">
-									<div class="item-dairy__image">
-										<img src="img/dairy4.png" alt="alt">
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="item-dairy">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="item-dairy__text">
-										<div class="item-dairy__number">05</div>
-										<p>Далее начинаются таинственные природные процессы, неподвластные человку, - работа сырных культур бактерий, сопровождаемая терпением и кропотливой работой сыровара. Чтобы процессы в сыре проходили равномерно, головы сыра в хранилище переворачиваются не мнее 2х раз в день на протяжении 6 и более месяцев в зависимости от сорта сыра - это и есть выдержка.</p>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/U6CdbM73yJY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									<div class="descr-section">Посмотреть на процесс приготовления сыра можно своими глазами с помощью онлайн-камеры, установленной у нас в цеху</div>
-								</div>
+					</div>
+					<div class="item-vacancy">
+						<div class="item-vacancy__head">Уборщики территории <span>от 35 000 руб.</span></div>
+						<div class="item-vacancy__content">
+							<p><strong>Требуемый опыт работы:</strong> 1–3 года  </p>
+							<p>Полная занятость, полный день</p>
+							<br>
+							<p><strong>Обязанности:</strong> работа с текущей клиентской базой;</p>
+							<p> поиск и подключение новых клиентов; работа с дебиторской задолженностью; отчетность.</p>
+							<br>
+							<p><strong>Требования:</strong> опыт работы ТП на продуктах питания от 1 года;  </p>
+							<p>знание шагов ТП, умение их применять, стремление к высокой заработной плате, ответственность, исполнительность, энергичность, стрессоустойчивость, честность;</p>
+							<br>
+							<p><strong>Условия:</strong> заработная плата от 60 000 рублей (оклад, бонусы % от продаж);</p>
+							<p>рабочий график с 09:00 до 18:00 компенсация мобильной связи.</p>
+							<div class="item-vacancy__bottom">
+								<a href="#" class="btn-main">Откликнуться на вакансию</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-
-			<div class="presentation">
-				<div class="container">
-					<div class="title-big">Приглашаем Вас насладиться <strong>неповторимыми вкусами сыров</strong> ТМ «Долина легенд»</div>
-					<div class="descr-big">
-						<p>изготовленных по авторским рецептам с любовью и выдержкой нашего сыровара Дениса Кожевникова.  </p>
-						<p>Ознакомиться с готовой продукцией можно в нашем каталоге.</p>
-					</div>
-					<a href="#" class="btn-main">Смотреть продукцию</a>
-				</div>
-			</div>
 
 			<section class="section">
 				<div class="wrap-sections">
